--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,11 +9,11 @@
   height: 5%;
   width: 50%;
 }
-.centered {
+#centered {
   text-align: center;  
   position: absolute;
-  top: 50%;
-  left: 48%;
+  top: 23%;
+  left: 47.5%;
   transform: translate(-50%, -50%);
 }
 
