--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,8 +20,8 @@
 #main {
   text-align: center;
   font-family: courier;
-  color: #383b3e;
-  max-width: 100%;
+  background-color:ivory;
+  max-width: 100%; 
   background-image: url("https://lh3.googleusercontent.com/iIDWWQnK8fXPWAj06VvX3jZrl-TjOiqTCTDrgezv0cICGO-8yjM5ljeAIlAYk7o4roSFkkxO4BsMvux0CvnAZH3ga0JHWYw8bzgb-s1OYdDrFNbrQqcZxJgrTvVIf9nLp3ueNSFkbgWFF0Frs4izeSKJVYeib2RtirgJYm1oh_jRPE9KIozjKrmkqoY0ORMNsfIgREal-0m-376HWoFxoNEtRbim4EM2GBmlHge2WNUP3EWbC0Bt5oYsNZ38dvOpiAuTfs0HM7_pDp6-G6fn9JpDoK2Ox-RDOBp2Wvmyx2sdC7CJCpaVkkIVU3GYyPrL3grTiEfLSz32SHZuOqxzG1Km2dU8bQE_FgJM-AMAM2YLe21ezNmuH7VZlO8FvL9oxRYIBwZ7mYJnAcD_i1hVaOlQoHqRDI-H9crQry9VAAf08PpcmjsHlLXY7MP4o4yUlLx-_x3uELL1n3OEMY8rNd_rVWwsh6h_N5351pmDDI88YVTnkaHaGRKh0Hn7UyjNlwheIj-iMt2Y-qMDDsKirNJ4ZGha8Agn8L9vQM0akfu7A7_VCpbJcClt9wMOX_r79pwShyniP8annlew3LgDq6rN7kX3xMZoJ1_f1wgTzLnnIdJlVu6KBKHDtvpnS_0jAyTmskvUNr68gCtulYo-VmnUNpvEwXVMB29PdAUgPvvYEgxMG2WL0J3vLwdu_A=w442-h610-no?authuser=0");
   background-size: 100%;
 }
